feat: set up IPFS, livepeer, subgraph

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.8",
+    "@livepeer/react": "^3.1.9",
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "dotenv": "^16.3.1",
     "ethers": "^6.9.2",
